feat: add new pattern